[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "billdb-flask-api"
version = "0.0.1"
description = ""
authors = ["lumpsoid"]
readme = "README.md"
packages = [{include = "billdb_flask_api"}]

[tool.poetry.dependencies]
python = "^3.8"
billdb = { git = "https://github.com/lumpsoid/billdb", branch = "main" }
flask = "^3.0.0"
gunicorn =  "^21.2.0"

[tool.poetry.scripts]
server = "app:main"